# mcp-taiwan-legal-db

./: .gitignore  .mcp.json  LICENSE  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/agno-bindu/: .env.example  README.md  bindu_agent.py  prompts.py
mcp_server/: __init__.py  config.py  server.py  ssl_setup.py  updater.py
mcp_server/cache/: db.py
mcp_server/data/: pcode_all.json
mcp_server/models/: judgment.py  regulation.py
mcp_server/parsers/: judicial_parser.py  regulation_parser.py
mcp_server/tests/: test_judicial_doc.py  test_judicial_parser.py  test_judicial_search.py  test_regulation_client.py  test_regulations.py  test_server.py
mcp_server/tools/: _errors.py  constitutional_court.py  judicial_doc.py  judicial_search.py  regulations.py  waf_bypass.py
